2010-05-16  Doug Hellmann  <dhellmann@racemi.com>

	* Makefile (PYTHON26): Use which to find python2.6, the default
	interpreter, so we can run the tests as "make test-quick" on other
	hosts.

	* tests/test_tempfile.sh (test_tempfile): Normalize the paths so
	we don't depend on the value of TMPDIR or behavior of dirname.

	* tests/test_cd.sh: Make sure the virtualenv from the caller does
	not influence test behaviors by establishing our own virtualenv
	locally.

	* virtualenvwrapper/hook_loader.py (main): Add more debug logging
	to try to narrow down the tempfile issue (#35).
	(run_hooks): Insert a comment into the output file to show which
	hook we are running.

	* virtualenvwrapper.sh (virtualenvwrapper_run_hook): Add more
	debugging error reporting to try to narrow down the tempfile
	issue (#35).

2010-05-09  Doug Hellmann  <dhellmann@racemi.com>

	* virtualenvwrapper.sh: Tweak path normalization code so double
	slashes are also removed from WORKON_HOME. Use typeset for local
	variables.
	(virtualenvwrapper_tempfile): Add -t option to mktemp so the new
	files are always created in the user's temporary directory.
	(virtualenvwrapper_run_hook): Add the hook name to the temporary
	file name.

	* tests/test_tempfile.sh: Remove obsolete test.  Fix assertions
	for remaining test.

	* tests/test_mkvirtualenv.sh (test_hooks): Use pwd to convert
	WORKON_HOME to the expected value.

	* tests/test.sh (test_python_interpreter_set_incorrectly): Rework
	grep-based assertion to actually pass.

	* Makefile (test-bash test-ksh test-sh): Remove wildcard build
	rule so test-quick target works.

2010-05-02  Doug Hellmann  <dhellmann@racemi.com>

	* virtualenvwrapper.sh (virtualenvwrapper_run_hook): Instead of
	-m, use -c so hooks can be run under Python 2.4.

2010-04-29  Doug Hellmann  <dhellmann@racemi.com>

	* tests/test_workon.sh: Refactor deactivate tests into their own
	script.

	* tests/test_deactivate.sh: Refactor deactivate tests into their
	own script.
